Add ant design landing page and use context for address

--- a/packages/react-app/src/themes/dark-theme.less
+++ b/packages/react-app/src/themes/dark-theme.less
@@ -6,16 +6,21 @@
 @primary-color: #2caad9;
 @border-radius-base: 4px;
 
-@component-background: #212121;
-@body-background: #212121;
-@popover-background: #212121;
+@component-background: #181a1b;
+@body-background: #181a1b;
+@popover-background: #181a1b;
 @border-color-base: #6f6c6c;
 @border-color-split: #424242;
 @table-header-sort-active-bg: #424242;
 @card-skeleton-bg: #424242;
 @skeleton-color: #424242;
-@table-header-sort-active-bg: #424242;
+@background-color: #181a1b;
+@background-gradient: linear-gradient(to top, fade(#191b1c, 30) 0%, fade(#2a2d2f, 30) 100%);
+@border-top-color: #3b4042;
 
+// .@{banner5} {
+//   background-image: @background-gradient;
+// }
 @link-color: @text-color;
 @icon-color: @primary-color;
 
